# 2025-Quantinuum-DechoherenceGang

./: README.md  pyproject.toml
hlsim/: hamiltonian_sim.py  lindblad_sim.py  utils.py
notebooks/: an_intro_to_pytket.ipynb  an_intro_to_quantinuum_nexus.ipynb  an_intro_to_quantinuum_nexus_part1.ipynb  an_intro_to_quantinuum_nexus_part2.ipynb  hamiltonian_simulation.ipynb  lindblad_simulation.ipynb  lindblad_simulation_partial.ipynb  solutions_hamiltonian.ipynb  solutions_lindblad.ipynb
notebooks/qasm/: qpe_circ_2_5.qasm
